# guass_target_problem

./: CMakeLists.txt
includes/: guass_target.h
src/: README.md  guass_target.c  main.c
